<resources>
    <string name="app_name">FVA-001</string>
    <string name="action_settings">Settings</string>
    <string name="btn_about">About</string>
    <string name="btn_start">Start</string>
    <string name="btn_language">Language</string>
    <string name="btn_exit">Exit</string>
    <string name="language_header">Language</string>
    <string name="language_english">English</string>
    <string name="language_bangla">Bangla</string>
    <string name="ask_homepage">Go Back To Homepage ?</string>
    <string name="stay">Stay</string>
    <string name="go">Go</string>
    <string name="map_found">Map Found</string>
    <string name="open">Open</string>
    <string name="pollution">Pollution Level</string>
    <string name="unorganized">Unorganized Level</string>
    <string name="risk">Risk Level</string>
    <string name="percent">30%</string>
    <string name="enter">Enter</string>
    <string name="lev_pol_text">Pollution</string>
    <string name="lev_un_text">Unorganized</string>
    <string name="lev_lev_risk">Risk</string>
    <string name="lev_time_text">Time</string>
    <string name="lev_score_text">Score</string>
    <string name="task_completed">Task Completed</string>
    <string name="task_remain">Task Remain</string>
    <string name="map">Map</string>
    <string name="hint">Hints</string>
    <string name="next"><u><![CDATA[Next >>]]></u></string>
    <string name="skip"><u>Skip</u></string>
    <string name="find_map">Find Map</string>
    <string name="go_to_store_room">Go to store room</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="data_loss">Progress will loss</string>
    <string name="text_continue">Continue</string>
    <string name="pollution_rate">Pollution Rate</string>
    <string name="percent_poll">30%</string>
    <string name="is_equal_to">=</string>
    <string name="pollution_score">200</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="Tools_used">Tools used</string>
    <string name="total_final_score">Total Final Score</string>
    <string name="new_high_score">New High Score</string>
    <string name="password">Password : </string>
    <string name="create">Create</string>
    <string name="name">Name : </string>
    <string name="create_account_info">This is a multiple user experience game.</string>
    <string name="create_account_info2">By creating an account you can see your progress level from here.</string>
    <string name="visit">Visit</string>
    <string name="create_account">Create Account</string>
    <string name="visit_account">Visit Account</string>
    <string name="reset">Reset</string>
    <string name="toolsandaccessories"><![CDATA[Tools & Accessories]]></string>
    <string name="tools">Tools</string>
    <string name="share">Share Progress</string>
</resources>
