<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="240dp"
    android:background="@drawable/background_dialog">

    <TextView
        android:id="@+id/language_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_header"
        android:textSize="36sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="#3e0c0e"
        android:textStyle="bold"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_english"
        android:id="@+id/option_1"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/language_header"
        android:layout_marginTop="14dp"
        android:textSize="28sp"
        android:textColor="#3e0c0e"
        android:textStyle="bold"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_bangla"
        android:id="@+id/option_2"
        android:layout_below="@id/option_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textSize="28sp"
        android:textColor="#3e0c0e"
        android:textStyle="bold"/>
</RelativeLayout>
