<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="170dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:background="@drawable/background_dialog"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/ask_homepage"
        android:textColor="#3e0c0e"
        android:textSize="25dp"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_stay"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@drawable/button_dialog"
            android:text="@string/stay"
            android:textColor="#e4a16a"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn_go"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_dialog"
            android:text="@string/go"
            android:textColor="#e4a16a"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>
