<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/level_wood_back">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lev_pol_text"
                style="@style/level_text_normal"/>

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pro_lev_pol"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/percent_pollution_levview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="30%"
                style="@style/level_text_normal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lev_un_text"
                android:layout_marginLeft="5dp"
                style="@style/level_text_normal"/>

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pro_lev_un"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/percent_unorganized_levview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="30%"
                style="@style/level_text_normal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lev_lev_risk"
                android:layout_marginLeft="5dp"
                style="@style/level_text_normal"/>

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pro_lev_risk"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/percent_risk_levview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="30%"
                style="@style/level_text_normal"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lev_time_text"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="3dp"
                style="@style/level_text_normal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/count_time"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:text="1:20"
                android:textColor="#F4DED1"
                android:textSize="10sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lev_score_text"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="3dp"
                style="@style/level_text_normal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/count_score"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:text="100345"
                android:textColor="#F4DED1"
                android:textSize="10sp"/>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:background="@color/level_wood_back">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/map"
            android:id="@+id/button2"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            style="@style/btn_wood"
            android:background="#5A2C23"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/hint"
            android:id="@+id/button3"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            style="@style/btn_wood"
            android:background="#5A2C23"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:background="@drawable/rounded_corner"
            android:padding="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/task_completed"
                style="@style/level_text"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/count_task"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:text="12"
                android:textColor="#F4DED1"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="25dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/task_remain"
                style="@style/level_text"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/count_task_remain"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:text="22"
                android:textColor="#F4DED1"
                android:textSize="14sp"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
