<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_layout_seek_store_room">

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btn_gohomepage"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/background_btn_progress"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_intro_man"
        android:background="@drawable/animation_intro_man"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btn_gohomepage"
        android:layout_toEndOf="@+id/btn_gohomepage" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_introman"
        android:layout_alignTop="@+id/image_intro_man"
        android:layout_toRightOf="@+id/image_intro_man"
        android:layout_toEndOf="@+id/image_intro_man"
        android:layout_marginTop="3dp"
        android:background="@drawable/rounded_transparent"
        android:textColor="#FBBE9B"
        android:textSize="12sp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/btn_next"
        android:layout_below="@+id/text_introman"
        android:layout_alignRight="@+id/text_introman"
        android:layout_alignEnd="@+id/text_introman"
        android:textColor="#FBBE9B"
        android:background="#00000000"
        android:onClick="textNext"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:id="@+id/btn_skip"
        android:layout_below="@+id/text_introman"
        android:layout_toLeftOf="@+id/btn_next"
        android:layout_toStartOf="@+id/btn_next"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:textColor="#FBBE9B"
        android:background="#00000000"
        android:onClick="textSkip"
        />

    <LinearLayout
        android:id="@+id/go_to_store_holder"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_skip"
        android:layout_alignLeft="@+id/text_introman"
        android:layout_alignStart="@+id/text_introman"
        android:background="@drawable/rounded_transparent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/find_map"
                android:id="@+id/textView5"
                android:layout_gravity="center"
                android:gravity="center"
                style="@style/btn_wood"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/go_to_store_room"
                android:background="@drawable/rounded_corner"
                android:textColor="#FBBE9B"
                android:id="@+id/btn_go_to_store_room" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
